:bug:correction body animation visibility

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,29 +17,29 @@
     visibility: hidden;
   }
 }
-@keyframes visibility-filter {
+@keyframes visibility-body {
   0% {
-    visibility: visible;
-    opacity: 0.6;
+    opacity: 0;
   }
   99% {
-    visibility: visible;
-    opacity: 0.6;
+    opacity: 0.8;
   }
   100% {
-    visibility: hidden;
-    opacity: 0;
+    opacity: 1;
   }
 }
 @keyframes visibility-spinner {
   0% {
     visibility: visible;
+    opacity: 0.8;
   }
   99% {
     visibility: visible;
+    opacity: 0.8;
   }
   100% {
     visibility: hidden;
+    opacity: 0;
   }
 }
 .full-heart {
@@ -190,11 +190,13 @@ a {
 .contenair {
   position: relative;
   z-index: 2;
+  animation: visibility-spinner 3s linear 1 forwards;
 }
 
 .body {
   position: absolute;
   z-index: 1;
+  animation: visibility-body 3s linear 1 forwards;
 }
 
 /*spinner*/
@@ -206,8 +208,7 @@ a {
   right: 0;
   bottom: 0;
   left: 0;
-  animation: visibility-filter 3s linear 1 forwards;
-  z-index: 5;
+  animation: visibility-spinner 3s linear 1 forwards;
 }
 
 .spinner {
@@ -216,7 +217,6 @@ a {
   left: 50%;
   transform: translate(-50%, -40%);
   transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
-  animation: visibility-spinner 3s linear 1 forwards;
 }
 .spinner__circle {
   width: 25vw;
