--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,9 +1,11 @@
 .contenair{
     position: relative;
     z-index: 2;
+    animation: visibility-spinner 3s linear 1 forwards;
 }
 
 .body{
     position: absolute;
     z-index: 1;
+    animation: visibility-body 3s linear 1 forwards;
 }
