--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,8 +7,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    animation: visibility-filter 3s linear 1 forwards;
-    z-index: 5;
+    animation: visibility-spinner 3s linear 1 forwards;
+    
 }
 
 .spinner {
@@ -17,7 +17,7 @@
     left: 50%;
     transform: translate(-50%, -40%);
     transition: transform 0.4s cubic-bezier(0.23, 1.83, 0.42, 1.19);
-    animation: visibility-spinner 3s linear 1 forwards;
+    
 
     &__circle {
         width: 25vw;
